# Claude-code-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json  init-podedit.sh
.github/workflows/: test.yml
data/: codex_review_sample.md  istock_search_cache.json  manuscripts_index.json  photo_preferences.json  photo_usage_history.json  published_articles.json
data/manuscripts/: 『「運と不運」には理由があります 』抜粋1本目　爪など.docx  『「運と不運」には理由があります 』抜粋2本目　ビニール傘.docx  『できる大人は、男も女も断わり上手』 抜粋3本目.docx  『中国ぎらいのための中国史』1本目安田確認.docx  (+103 more)
docs/: asr_p0_0_spec.md  asr_speedup_plan.md
output/: eval_v1_20articles.json  eval_v1_pilot.json  eval_v1_summary.md  eval_v2_20articles.json  eval_v2_summary.md  eval_v3_20articles.json  eval_v3_summary.md  eval_v4_50articles.json  precision_v3.md  precision_v4.md
scripts/: cms_photo_eval.py  precision_analyzer.py  refresh_channel_ids.py  start-cms-assist.ps1  start-cms-assist.sh  summarize_eval.py  validate_lists.py  w1_bench.sh
tests/: cms-assist.test.js  test_annotations.py  test_api_dictionary.py  test_api_glossary.py  test_api_library_delete.py  test_asr_dictionary.py  test_asr_eval.py  test_asr_speed_config.py  test_candidate_reranker.py  test_cli.py  test_cms_entry_assistant.py  test_edit.py  test_glossary.py  test_istock_search_query_plan.py  test_kpi_summary.py  test_llm_query_generator.py  test_prompt_resolution.py  test_render.py  test_seam_eval.py  test_timeline.py  test_upload.py  test_waveform.py
(+114 files in other folders)
