[project]
name = "podedit"
version = "0.1.0"
description = "Local-first podcast editor: transcript-driven audio editing for Japanese podcasts."
authors = [
    { name = "toshiakiyanagawa-code", email = "toshiaki.yanagawa@president.co.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "soundfile>=0.13.0",
    "numpy>=2.0.0",
    "click>=8.1.7",
    "rich>=13.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyloudnorm>=0.1.1",
]

[project.scripts]
podedit = "podedit.cli:cli"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.27.0",  # required by fastapi.testclient
]
